--- a/data.html
+++ b/data.html
@@ -18,22 +18,11 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>12345</td>
-        <td>Andi</td>
-        <td>2025-07-03 08:00 - 10:00</td>
-      </tr>
-      <tr>
-        <td>67890</td>
-        <td>Budi</td>
-        <td>2025-07-03 09:00 - 11:00</td>
-      </tr>
-      <tr>
-        <td>11223</td>
-        <td>Citra</td>
-        <td>2025-07-03 07:30 - 09:30</td>
-      </tr>
-      <!-- Tambah data lainnya disini -->
+      <!-- Paste tabel Excel disini -->
+      <!-- Contoh: -->
+      <tr><td>12345</td><td>Andi</td><td>2025-07-03 08:00 - 10:00</td></tr>
+      <tr><td>67890</td><td>Budi</td><td>2025-07-03 09:00 - 11:00</td></tr>
+      <tr><td>11223</td><td>Citra</td><td>2025-07-03 07:30 - 09:30</td></tr>
     </tbody>
   </table>
 </body>
