--- a/index.html
+++ b/index.html
@@ -86,66 +86,91 @@
 
   <div id="result"></div>
 
-  <script>
-    async function loadData() {
-      try {
-        const response = await fetch('data.html');
-        const text = await response.text();
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(text, 'text/html');
-        const table = doc.querySelector('#data-pelanggan');
-        if (!table) return [];
+  <section id="info-terencana" style="margin-top:2em; padding:1em; border: 2px solid #ffcc00; border-radius:5px; background:#fff8cc; color:#003366; font-weight:600;">
+    <h2>Informasi Pemadaman Terencana</h2>
+    <p>
+      Pemadaman listrik ini dilakukan untuk pemeliharaan jaringan dan peningkatan kualitas layanan.<br />
+      Mohon maaf atas ketidaknyamanan yang ditimbulkan.<br />
+      Untuk info lebih lanjut, silakan hubungi kantor PLN ULP Ngunut atau kunjungi website resmi kami.
+    </p>
+  </section>
 
-        const rows = [...table.querySelectorAll('tbody tr')];
-        return rows.map(row => {
-          const cells = row.querySelectorAll('td');
-          return {
-            id: cells[0].textContent.trim(),
-            nomorMeter: cells[1].textContent.trim(),
-            nama: cells[2].textContent.trim(),
-            waktu: cells[3].textContent.trim()
-          };
+<script>
+  // Contoh data base64 (encoded HTML table rows)
+  // Nanti kamu bisa generate base64 dari data tabel lengkap dan simpan di file data.html
+  const encodedData = `
+PHRyPjx0ZD4xMjM0NTwvdGQ+PHRkPjk4NzY1NDMyMTwvdGQ+PHRkPkFuZGk8L3RkPjx0ZD4yMDI1LTA3LTAzIDA4OjAw
+IC0gMTA6MDA8L3RkPjwvdHI+Cjx0cj48dGQ+Njc4OTA8L3RkPjx0ZD4xMjM0NTY3ODk8L3RkPjx0ZD5CdWRpPC90ZD48
+dGQ+MjAyNS0wNy0wMyAwOTowMCAtIDExOjAwPC90ZD48L3RyPgo8dHI+PHRkPjExMjIzPC90ZD48dGQ+MTExMjIyMzM8
+L3RkPjx0ZD5DaXRyYTwvdGQ+PHRkPjIwMjUtMDctMDMgMDc6MzAgLSAwOTozMDwvdGQ+PC90cj4=
+  `.replace(/\s/g, '');
+
+  // Fungsi decode base64 dan parsing ke objek data
+  function decodeData() {
+    const decodedStr = atob(encodedData);
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(`<table>${decodedStr}</table>`, 'text/html');
+    const rows = doc.querySelectorAll('tr');
+    const data = [];
+    rows.forEach(row => {
+      const cells = row.querySelectorAll('td');
+      if (cells.length === 4) {
+        data.push({
+          id: cells[0].textContent.trim(),
+          nomorMeter: cells[1].textContent.trim(),
+          nama: cells[2].textContent.trim(),
+          waktu: cells[3].textContent.trim()
         });
-      } catch (error) {
-        console.error('Gagal memuat data:', error);
-        return [];
       }
+    });
+    return data;
+  }
+
+  function isValidInput(input) {
+    // Hanya huruf dan angka, minimal 5 karakter
+    const regex = /^[a-zA-Z0-9]{5,}$/;
+    return regex.test(input);
+  }
+
+  document.getElementById('searchBtn').addEventListener('click', () => {
+    const input = document.getElementById('idNomor').value.trim();
+    const resultDiv = document.getElementById('result');
+
+    if (!input) {
+      resultDiv.textContent = 'Masukkan ID Pelanggan atau Nomor Meter terlebih dahulu.';
+      return;
     }
 
-    document.getElementById('searchBtn').addEventListener('click', async () => {
-      const input = document.getElementById('idNomor').value.trim();
-      const resultDiv = document.getElementById('result');
-      resultDiv.textContent = 'Mencari...';
+    if (!isValidInput(input)) {
+      resultDiv.textContent = 'Input tidak valid. Gunakan huruf dan angka minimal 5 karakter.';
+      return;
+    }
 
-      if (!input) {
-        resultDiv.textContent = 'Masukkan ID Pelanggan atau Nomor Meter terlebih dahulu.';
-        return;
-      }
+    resultDiv.textContent = 'Mencari...';
 
-      const data = await loadData();
+    const data = decodeData();
+    const ditemukan = data.find(d => d.id === input || d.nomorMeter === input);
 
-      // Cari berdasarkan ID pelanggan atau Nomor Meter (case sensitive)
-      const ditemukan = data.find(d => d.id === input || d.nomorMeter === input);
+    if (ditemukan) {
+      resultDiv.innerHTML = `
+        <p><strong>ID Pelanggan:</strong> ${ditemukan.id}</p>
+        <p><strong>Nomor Meter:</strong> ${ditemukan.nomorMeter}</p>
+        <p><strong>Nama:</strong> ${ditemukan.nama}</p>
+        <p><strong>Waktu Pemadaman:</strong> ${ditemukan.waktu}</p>
+      `;
+    } else {
+      resultDiv.textContent = 'Data tidak ditemukan atau tidak terdampak pemadaman.';
+    }
+  });
 
-      if (ditemukan) {
-        resultDiv.innerHTML = `
-          <p><strong>ID Pelanggan:</strong> ${ditemukan.id}</p>
-          <p><strong>Nomor Meter:</strong> ${ditemukan.nomorMeter}</p>
-          <p><strong>Nama:</strong> ${ditemukan.nama}</p>
-          <p><strong>Waktu Pemadaman:</strong> ${ditemukan.waktu}</p>
-        `;
-      } else {
-        resultDiv.textContent = 'Data tidak ditemukan atau tidak terdampak pemadaman.';
-      }
-    });
-
-    document.getElementById('idNomor').addEventListener('keydown', e => {
-      if (e.key === 'Enter') {
-        e.preventDefault();
-        document.getElementById('searchBtn').click();
-      }
-    });
-  </script>
+  // Support pencarian dengan Enter key
+  document.getElementById('idNomor').addEventListener('keydown', e => {
+    if (e.key === 'Enter') {
+      e.preventDefault();
+      document.getElementById('searchBtn').click();
+    }
+  });
+</script>
 
 </body>
 </html>
