--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <header>
     <img src="pln.png" alt="Logo PLN" class="logo" />
     <h1>PT PLN (Persero) ULP Ngunut</h1>
+    <h1>Informasi Terdampak Pemadaman Terencana</h1>
   </header>
 
   <label for="idNomor">Masukkan ID Pelanggan atau Nomor Meter:</label>
@@ -88,10 +89,10 @@
 
   <section id="info-terencana" style="margin-top:2em; padding:1em; border: 2px solid #ffcc00; border-radius:5px; background:#fff8cc; color:#003366;">
     <h2 style="white-space: pre-line; text-align: center;">
-      PT PLN (Persero) ULP Ngunut<br />Informasi Pemadaman Terencana
+      Informasi Terkait Pemadaman Terencana
     </h2>
     <p style="font-weight: normal; text-align: justify; margin-top: 1em;">
-      Pemadaman listrik terencana ini dilakukan dalam rangka pemeliharaan jaringan dan peningkatan kualitas layanan. 
+      Pemadaman listrik terencana dilakukan dalam rangka pemeliharaan jaringan dan peningkatan kualitas layanan. 
       Mohon maaf atas ketidaknyamanan yang ditimbulkan. Apabila pekerjaan selesai sebelum waktu yang telah ditentukan, maka listrik akan dinormalkan kembali.
     </p>
   </section>
