--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
       color: #003366;
     }
     #result {
-      background: white;
       border: 2px solid #003366;
       padding: 1em;
       border-radius: 5px;
       min-height: 80px;
-      color: #003366;
       font-weight: 600;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
     .logo {
       display: block;
@@ -143,21 +142,25 @@
     const resultDiv = document.getElementById('result');
 
     if (!input) {
+      resultDiv.style.backgroundColor = '#f8d7da';
+      resultDiv.style.color = '#721c24';
       resultDiv.textContent = 'Masukkan ID Pelanggan atau Nomor Meter terlebih dahulu.';
       return;
     }
 
     if (!isValidInput(input)) {
+      resultDiv.style.backgroundColor = '#f8d7da';
+      resultDiv.style.color = '#721c24';
       resultDiv.textContent = 'Input tidak valid. Gunakan huruf dan angka minimal 5 karakter.';
       return;
     }
-
-    resultDiv.textContent = 'Mencari...';
 
     const data = decodeData();
     const ditemukan = data.find(d => d.id === input || d.nomorMeter === input);
 
     if (ditemukan) {
+      resultDiv.style.backgroundColor = '#d4edda'; // Hijau muda
+      resultDiv.style.color = '#155724'; // Hijau tua
       resultDiv.innerHTML = `
         <p><strong>ID Pelanggan:</strong> ${sensorAngka(ditemukan.id)}</p>
         <p><strong>Nomor Meter:</strong> ${sensorAngka(ditemukan.nomorMeter)}</p>
@@ -165,6 +168,8 @@
         <p><strong>Waktu Pemadaman:</strong> ${ditemukan.waktu}</p>
       `;
     } else {
+      resultDiv.style.backgroundColor = '#f8d7da'; // Merah kusam
+      resultDiv.style.color = '#721c24'; // Merah tua
       resultDiv.textContent = 'Data tidak ditemukan atau tidak terdampak pemadaman.';
     }
   });
