--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cek Pemadaman PLN - ULP Ngunut</title>
+  <link rel="icon" href="pln.png" type="image/png" />
   <style>
     body {
       font-family: Arial, sans-serif;
