--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cek Pemadaman PLN - ULP Ngunut</title>
-  <link rel="icon" href="pln.png" type="image/png" />
+<link rel="icon" href="pln.png" type="image/png" />
+
+<!-- Tambahan untuk thumbnail logo PLN saat dibagikan -->
+<meta property="og:title" content="Cek Pemadaman PLN - ULP Ngunut" />
+<meta property="og:description" content="Cari apakah ID Pelanggan atau Nomor Meter Anda terdampak pemadaman listrik terencana." />
+<meta property="og:image" content="https://namakamu.github.io/pln.png" />
+<meta property="og:url" content="https://namakamu.github.io/" />
+<meta property="og:type" content="website" />
+<meta name="twitter:card" content="summary_large_image" />
+
   <style>
     body {
       font-family: Arial, sans-serif;
